--- a/PizzaJuan/PizzaJuan.csproj
+++ b/PizzaJuan/PizzaJuan.csproj
@@ -120,6 +120,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DrinkController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PizzaController.cs" />
     <Compile Include="Global.asax.cs">
@@ -186,6 +187,7 @@
     <Content Include="Data_Files\Bases.json" />
     <Content Include="Data_Files\Beverages.json" />
     <Content Include="Data_Files\Combos.json" />
+    <Content Include="Data_Files\PizzaTypes.json" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\createPizza.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -213,6 +215,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Pizza\CreatePizza.cshtml" />
+    <Content Include="Views\Drink\ChooseBeverage.cshtml" />
+    <Content Include="Views\Pizza\ChoosePizza.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
