Testing: Added tests of methods in JsonParser

--- a/PizzaJuan.Tests/PizzaJuan.Tests.csproj
+++ b/PizzaJuan.Tests/PizzaJuan.Tests.csproj
@@ -89,6 +89,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\JsonParserTest.cs" />
+    <Compile Include="Controllers\PizzaControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
